Added comments describing value class de-serialization and serialization. Implementation does not cover superclasses with fields.